--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,9 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -46,19 +47,20 @@ body {
 }
 
 /* donate-section */
-.donate-today-area{
+.donate-today-area {
     /* align-items: center; */
     justify-content: center;
 }
 
-.donate-today{
+.donate-today {
     text-align: center;
     margin-top: 50px;
     margin-bottom: 20px;
     font-weight: 700;
     font-size: 42px;
 }
-.donate-para{
+
+.donate-para {
     text-align: center;
     margin-top: 30px;
     margin-bottom: 20px;
@@ -66,53 +68,165 @@ body {
     font-weight: 400;
 }
 
-.money-card ul li{
+.money-card ul li {
     list-style: none;
     margin-right: 20px;
     margin-bottom: 20px;
     margin-top: 30px;
     padding: 20px;
 
-    
-   
+
+
 }
-.money-card-list .border{
+
+.money-card-list .border {
     border: 1px solid rgb(196, 105, 105);
 }
-.money-card-list{
+
+.money-card-list {
     display: flex;
     justify-content: center;
     font-size: 30px;
 }
-.others-amount{
+
+.others-amount {
     text-align: center;
     margin-bottom: 10px;
-    
+
 }
-.hr-line{
+
+.hr-line {
     width: 700px;
     margin: 0 auto;
     margin-bottom: 10px;
 }
+
 /* our donate plan */
-.donate-heading{
+.donate-heading {
     font-size: 42px;
     font-weight: 600;
     text-align: center;
 }
-.donate-para{
+
+.donate-para {
     font-size: 18px;
     font-weight: 400;
     text-align: center;
 }
-.donate-category{
+
+.donate-category {
     display: flex;
     gap: 20px;
     margin: 30px 110px;
 }
-.food{
+
+.food {
     margin-bottom: 20px;
 }
-/* .food-family{
+
+.img-logo {
     margin-bottom: 20px;
-} */
+}
+
+/* blog & photo gallery */
+.blog-container {
+    margin-top: 180px;
+    margin-bottom: 30px;
+}
+
+.blog-1 {
+    display: flex;
+    justify-content: space-around;
+}
+
+.blog-image {
+    width: 380px;
+    height: 410px;
+
+}
+
+.blog-heading {
+    font-size: 42px;
+    font-weight: 600;
+    margin-top: 50px;
+}
+
+.blog-para {
+    margin-top: 20px;
+}
+
+.btn-blog {
+    background: rgb(134, 69, 69);
+    padding: 10px;
+    margin-top: 20px;
+    border: none;
+    border-radius: 5px;
+}
+
+.blog-2 {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 120px;
+}
+
+/* updates section */
+.updates {
+    margin-top: 50px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.update-heading {
+    font-weight: 700;
+    font-size: 42px;
+}
+
+.update-para {
+    margin-top: 30px;
+}
+
+/* contacts section */
+.contacts {
+    display: flex;
+    align-items: center;
+    margin: 30px 450px;
+    width: 100%;
+}
+
+.mail {
+    height: 50px;
+    background: rgba(159, 189, 197, 0.658);
+    width: 290px;
+    border: none;
+    padding: 10px 0;
+    
+}
+
+.subs {
+    height: 50px;
+    background: rgba(141, 71, 62, 0.986);
+    border: none;
+    padding: 10px 0;
+    color: white;
+    
+}
+
+/* footer section */
+.footer {
+    background-color: black;
+    width: 100%;
+}
+
+.footer-head {
+    font-size: 42px;
+    font-stretch: 800;
+    text-align: center;
+    color: rgba(148, 57, 51, 0.644);
+    font-family: 'Open Sans', sans-serif;
+    
+}
+.footer-para{
+    text-align: center;
+    font-size: 24px;
+    font-weight: 500;
+}
