--- a/styles/style.css
+++ b/styles/style.css
@@ -4,37 +4,38 @@
     box-sizing: border-box;
 }
 
-body {
+body{
+    width: 100vw;
+    height: 100vh;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 /* header section */
-.main-header {
-    background-color: gray;
+.main-header{
     width: 100%;
     height: 100vh;
-
+    background-image: url(../images/donation13.jpg);
+    background-repeat: no-repeat;
+    background-blend-mode: multiply;
+    background-size: cover;
+    color: white;
 }
-
-.header-heading {
+.header-heading{
     font-size: 42px;
-    font-weight: 800;
+    font-weight: 700;
     text-align: center;
-    margin-top: 100px;
-    /* margin-left: 180px;
-    margin-right: 180px; */
+    margin-top: 40px;
+    
 }
 
-.heading-para {
+.heading-para{
     font-weight: 400;
     font-size: 18px;
     text-align: center;
     margin-top: 20px;
-    /* margin-left: 220px;
-    margin-right: 220px; */
 }
 
-.donate-btn-primary {
+.donate-btn-primary{
     margin-left: 50%;
     margin-right: 50%;
     margin-bottom: 80px;
@@ -47,12 +48,12 @@ body {
 }
 
 /* donate-section */
-.donate-today-area {
+.donate-today-area{
     /* align-items: center; */
     justify-content: center;
 }
 
-.donate-today {
+.donate-today{
     text-align: center;
     margin-top: 50px;
     margin-bottom: 20px;
@@ -60,7 +61,7 @@ body {
     font-size: 42px;
 }
 
-.donate-para {
+.donate-para{
     text-align: center;
     margin-top: 30px;
     margin-bottom: 20px;
@@ -68,7 +69,7 @@ body {
     font-weight: 400;
 }
 
-.money-card ul li {
+.money-card ul li{
     list-style: none;
     margin-right: 20px;
     margin-bottom: 20px;
@@ -79,83 +80,83 @@ body {
 
 }
 
-.money-card-list .border {
+.money-card-list .border{
     border: 1px solid rgb(196, 105, 105);
 }
 
-.money-card-list {
+.money-card-list{
     display: flex;
     justify-content: center;
     font-size: 30px;
 }
 
-.others-amount {
+.others-amount{
     text-align: center;
     margin-bottom: 10px;
 
 }
 
-.hr-line {
+.hr-line{
     width: 700px;
     margin: 0 auto;
     margin-bottom: 10px;
 }
 
 /* our donate plan */
-.donate-heading {
+.donate-heading{
     font-size: 42px;
     font-weight: 600;
     text-align: center;
 }
 
-.donate-para {
+.donate-para{
     font-size: 18px;
     font-weight: 400;
     text-align: center;
 }
 
-.donate-category {
+.donate-category{
     display: flex;
     gap: 20px;
     margin: 30px 110px;
 }
 
-.food {
+.food{
     margin-bottom: 20px;
 }
 
-.img-logo {
+.img-logo{
     margin-bottom: 20px;
 }
 
 /* blog & photo gallery */
-.blog-container {
+.blog-container{
     margin-top: 180px;
     margin-bottom: 30px;
 }
 
-.blog-1 {
+.blog-1{
     display: flex;
     justify-content: space-around;
 }
 
-.blog-image {
+.blog-image{
     width: 380px;
     height: 410px;
 
 }
 
-.blog-heading {
+.blog-heading{
     font-size: 42px;
     font-weight: 600;
     margin-top: 50px;
 }
 
-.blog-para {
+.blog-para{
     margin-top: 20px;
 }
 
-.btn-blog {
+.btn-blog{
     background: rgb(134, 69, 69);
     padding: 10px;
     margin-top: 20px;
@@ -163,46 +164,44 @@ body {
     border-radius: 5px;
 }
 
-.blog-2 {
+.blog-2{
     display: flex;
     justify-content: space-around;
     margin-top: 120px;
 }
 
 /* updates section */
-.updates {
+.updates{
     margin-top: 50px;
     margin-bottom: 20px;
     text-align: center;
 }
 
-.update-heading {
+.update-heading{
     font-weight: 700;
     font-size: 42px;
 }
 
-.update-para {
+.update-para{
     margin-top: 30px;
 }
 
 /* contacts section */
-.contacts {
+.contacts-sec{
     display: flex;
     align-items: center;
     margin: 30px 450px;
     width: 100%;
+    background-color: rgb(190, 127, 75);
 }
-
-.mail {
+.mail{
     height: 50px;
     background: rgba(159, 189, 197, 0.658);
     width: 290px;
     border: none;
     padding: 10px 0;
-    
-}
-
-.subs {
+    }
+.subs{
     height: 50px;
     background: rgba(141, 71, 62, 0.986);
     border: none;
@@ -212,12 +211,13 @@ body {
 }
 
 /* footer section */
-.footer {
+.footer{
     background-color: black;
     width: 100%;
+    height: 80px;
 }
 
-.footer-head {
+.footer-head{
     font-size: 42px;
     font-stretch: 800;
     text-align: center;
