--- a/styles/style.css
+++ b/styles/style.css
@@ -3,13 +3,11 @@
     padding: 0;
     box-sizing: border-box;
 }
-
 body{
     width: 100vw;
     height: 100vh;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-
 /* header section */
 .main-header{
     width: 100%;
@@ -19,13 +17,16 @@ body{
     background-blend-mode: multiply;
     background-size: cover;
     color: white;
+    overflow: hidden;
+}
+.main-head{
+    margin-top: 200px;
 }
 .header-heading{
     font-size: 42px;
     font-weight: 700;
     text-align: center;
-    margin-top: 40px;
-    
+    margin-top: 40px;   
 }
 
 .heading-para{
@@ -190,8 +191,10 @@ body{
 .contacts-sec{
     display: flex;
     align-items: center;
-    margin: 30px 450px;
-    width: 100%;
+    justify-content: center;
+    margin: auto;
+    width: 50%;
+    height: 300px;
     background-color: rgb(190, 127, 75);
 }
 .mail{
@@ -211,10 +214,10 @@ body{
 }
 
 /* footer section */
-.footer{
+footer{
     background-color: black;
     width: 100%;
-    height: 80px;
+    height: 120px;
 }
 
 .footer-head{
@@ -229,4 +232,5 @@ body{
     text-align: center;
     font-size: 24px;
     font-weight: 500;
+    color: white;
 }
